--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -16,7 +16,9 @@
     background-attachment: fixed;
     background-position: center;
 }
-
+.css-13vb7vl-MuiPaper-root-MuiAppBar-root {
+    background-color: transparent !important;
+  }
 .about-section .content {
     text-align: left;
     z-index: 2;
