--- a/src/assets/styles/Expertise.scss
+++ b/src/assets/styles/Expertise.scss
@@ -1,85 +1,37 @@
-.skills-container {
-    padding: 5% 10%;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-
-    svg {
-        color: white;
-    }
-}
-  
-.skills-container .skills-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
-}
-  
-.skills-container .skills-grid .skill {
-    align-items: center;
-    text-align: left;
-}
-  
-.chip {
-    color: rgb(39, 40, 34) !important;
-    background-color: white !important;
-    font-size: 0.8rem !important;
-    height: 25px !important;
-  
-    span {
-        font-family: 'Courier Prime', monospace;
-        color: rgb(39, 40, 34);
-    }
-  
-    svg {
-        height: 15px !important;
-    }
+.expertise-container {
+  position: relative;
+  padding: 2rem;
 }
 
-.flex-chips {
-    line-height: 2;
-    margin: 0.5;
-
-    .chip-title {
-        color: white;
-        padding-right: 10px;
-    }
+.expertise-title {
+  margin-top: 50px;
+  margin-left: 100px;
 }
 
-.flex-chips .MuiChip-root {
-    margin-right: 0.5em;
+.icons-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  padding: 1rem;
+  margin: 4em 10em 0em 10em;
 }
 
-.flex-chips .MuiChip-outlined {
-    background-color: #e0e0e0;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
+.icon-wrapper {
+  transition: transform 0.3s ease;
 }
 
-.flex-chips .MuiChip-outlined span {
-    color: rgb(39, 40, 34);
+.tech-icon {
+  transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
-@media screen {
-    @media (max-width: 768px) {
-        .skills-container {
-            display: block;
-            padding-left: 5%;
-            padding-right: 5%;
-        }
-    
-        .skills-container .skills-grid {
-            display: initial;
-        }
-        
-        .skills-container .skills-grid .skill {
-            padding-bottom: 5%;
-        }
-    }
+// Aumenta o ícone ao passar o mouse
+.icon-wrapper:hover .tech-icon {
+  transform: scale(4.3);
+}
 
-    @media (max-width: 567px) {
-        .skills {
-            font-size: 12px;
-        }
-    }
+// Reduz o tamanho dos ícones não selecionados, mas sem escurecer
+.icons-grid:hover .icon-wrapper:not(:hover) {
+  transform: scale(0.8); // Reduz os ícones ao redor para 0.8x sem escurecer
 }
