--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100%;
 }
 
 .header-image {
